[gd_scene load_steps=14 format=3 uid="uid://cs7kdpemhirwt"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_qmj53"]
[ext_resource type="PackedScene" uid="uid://dsm0u4o7lg7sr" path="res://scenes/objects/player/player.tscn" id="2_rnqeu"]
[ext_resource type="Script" path="res://scenes/menu/Pause.gd" id="3_2l8oy"]
[ext_resource type="PackedScene" uid="uid://clvp4cain5340" path="res://scenes/levels/lobby.tscn" id="4_8a8k5"]
[ext_resource type="Texture2D" uid="uid://d1jwgpxe1f4av" path="res://assets/sprites/gargantua-black-2880x1800-9659.jpg" id="5_00j62"]
[ext_resource type="Texture2D" uid="uid://cx1qjk4ln0xff" path="res://assets/sprites/harmonolith-logo.png" id="5_qqfps"]
[ext_resource type="FontFile" uid="uid://c8yr17aja0yyi" path="res://assets/fonts/BigBlueTermPlusNerdFontMono-Regular.ttf" id="6_k71oe"]
[ext_resource type="Texture2D" uid="uid://ddegk47ga8sr6" path="res://assets/sprites/test/sunsage-test.png" id="9_0l3ol"]
[ext_resource type="Texture2D" uid="uid://dhb68iwrked01" path="res://assets/sprites/test/pressed-test.png" id="10_wvym4"]
[ext_resource type="Texture2D" uid="uid://dtp3i4vqr2j50" path="res://assets/sprites/test/valkaryan-test.png" id="11_wipfw"]
[ext_resource type="Texture2D" uid="uid://bt2hhe5mipkfu" path="res://assets/sprites/test/untethered-test.png" id="13_or7ac"]
[ext_resource type="Texture2D" uid="uid://6ihw0co7pssx" path="res://assets/sprites/test/swarm-test.png" id="14_8we1r"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_tu3f3"]
properties/0/path = NodePath("MarginContainer/VBoxContainer/Faction Buttons/SunSage Button:disabled")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("MarginContainer/VBoxContainer/Faction Buttons/Valkaryan Button:disabled")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("MarginContainer/VBoxContainer/Faction Buttons/Untethered Button:disabled")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("MarginContainer/VBoxContainer/Faction Buttons/Swarm Button:disabled")
properties/3/spawn = true
properties/3/replication_mode = 1

[node name="Main" type="Node"]
script = ExtResource("1_qmj53")
Player = ExtResource("2_rnqeu")
Lobby = ExtResource("4_8a8k5")
TestMap = ExtResource("4_8a8k5")

[node name="MapInstance" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="PlayerSpawn" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 2

[node name="MainMenu" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MainMenu"]
layout_mode = 0
offset_left = 6.0
offset_top = -50.0
offset_right = 1923.0
offset_bottom = 1148.0
texture = ExtResource("5_00j62")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 0
offset_left = 120.0
offset_top = 48.0
offset_right = 1470.0
offset_bottom = 1184.0
scale = Vector2(1.24687, 1.21523)
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 5

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/MainMenu/MarginContainer"]
custom_minimum_size = Vector2(300, 310)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
texture = ExtResource("5_qqfps")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Title Text" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 29
theme_override_fonts/font = ExtResource("6_k71oe")
theme_override_font_sizes/font_size = 92
text = "HARMONOLITH"
horizontal_alignment = 1
uppercase = true

[node name="_Space" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "
"

[node name="OnlineHost" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_k71oe")
theme_override_font_sizes/font_size = 30
text = "Start Game"

[node name="_Space2" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "
"

[node name="IPAddress" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("6_k71oe")
theme_override_font_sizes/font_size = 30
placeholder_text = "Enter server IP"

[node name="Space3" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "
"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_k71oe")
theme_override_font_sizes/font_size = 30
text = "Join"

[node name="Space4" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "
"

[node name="SettingsButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_k71oe")
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="Space5" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "
"

[node name="ExitButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_k71oe")
theme_override_font_sizes/font_size = 30
text = "Exit Game"

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
script = ExtResource("3_2l8oy")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PauseMenu"]
layout_mode = 0
offset_left = 285.0
offset_top = 199.5
offset_right = 1635.0
offset_bottom = 880.5
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Paused"
horizontal_alignment = 1

[node name="Label1" type="Label" parent="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Server IP Address:"
horizontal_alignment = 1

[node name="DisplayIPAddress" type="Label" parent="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "127.0.0.1"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "
"

[node name="SettingsButton" type="Button" parent="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="Label5" type="Label" parent="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "
"

[node name="ResumeButton" type="Button" parent="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 30
text = "Resume Game"

[node name="Label3" type="Label" parent="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "
"

[node name="QuitButton" type="Button" parent="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 30
text = "Quit to Main Menu"

[node name="Label6" type="Label" parent="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "
"

[node name="ExitButton" type="Button" parent="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 30
text = "Exit Game"

[node name="FactionSelectMenu" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/FactionSelectMenu"]
layout_mode = 0
offset_left = 104.0
offset_top = 8.0
offset_right = 1816.0
offset_bottom = 689.0
scale = Vector2(1, 1.52)
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/FactionSelectMenu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/FactionSelectMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_k71oe")
theme_override_font_sizes/font_size = 45
text = "Choose a Faction:"
horizontal_alignment = 1

[node name="Faction Buttons" type="HBoxContainer" parent="CanvasLayer/FactionSelectMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SunSage Button" type="TextureButton" parent="CanvasLayer/FactionSelectMenu/MarginContainer/VBoxContainer/Faction Buttons"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("9_0l3ol")
texture_pressed = ExtResource("10_wvym4")
texture_disabled = ExtResource("10_wvym4")

[node name="Valkaryan Button" type="TextureButton" parent="CanvasLayer/FactionSelectMenu/MarginContainer/VBoxContainer/Faction Buttons"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("11_wipfw")
texture_pressed = ExtResource("10_wvym4")
texture_disabled = ExtResource("10_wvym4")

[node name="Untethered Button" type="TextureButton" parent="CanvasLayer/FactionSelectMenu/MarginContainer/VBoxContainer/Faction Buttons"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("13_or7ac")
texture_pressed = ExtResource("10_wvym4")
texture_disabled = ExtResource("10_wvym4")

[node name="Swarm Button" type="TextureButton" parent="CanvasLayer/FactionSelectMenu/MarginContainer/VBoxContainer/Faction Buttons"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("14_8we1r")
texture_pressed = ExtResource("10_wvym4")
texture_disabled = ExtResource("10_wvym4")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="CanvasLayer/FactionSelectMenu"]
replication_config = SubResource("SceneReplicationConfig_tu3f3")

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/OnlineHost" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/ExitButton" to="CanvasLayer/PauseMenu" method="_on_exit_button_pressed"]
[connection signal="exit" from="CanvasLayer/PauseMenu" to="." method="_on_peer_disconnected"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer/SettingsButton" to="CanvasLayer/PauseMenu" method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer/ResumeButton" to="CanvasLayer/PauseMenu" method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer/QuitButton" to="CanvasLayer/PauseMenu" method="_on_quit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer/ExitButton" to="CanvasLayer/PauseMenu" method="_on_exit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/FactionSelectMenu/MarginContainer/VBoxContainer/Faction Buttons/SunSage Button" to="." method="_on_faction_selected" binds= [0]]
[connection signal="pressed" from="CanvasLayer/FactionSelectMenu/MarginContainer/VBoxContainer/Faction Buttons/Valkaryan Button" to="." method="_on_faction_selected" binds= [1]]
[connection signal="pressed" from="CanvasLayer/FactionSelectMenu/MarginContainer/VBoxContainer/Faction Buttons/Untethered Button" to="." method="_on_faction_selected" binds= [2]]
[connection signal="pressed" from="CanvasLayer/FactionSelectMenu/MarginContainer/VBoxContainer/Faction Buttons/Swarm Button" to="." method="_on_faction_selected" binds= [3]]
